2008-10-11  David A. Capello  <davidcapello@gmail.com>

	* src/raster/undoable.cpp (Undoable::set_constant_frame_rate): Added.
	(Undoable::set_frame_length): Renamed to set_frame_duration.

	* src/commands/cmd_frame_properties.cpp (dialogs_frame_length):
	Added undo.

2008-10-10  David A. Capello  <davidcapello@gmail.com>

	* src/util/misc.cpp (ClearMask): Removed.

	* src/util/clipbrd.cpp (cut_to_clipboard): Use Undoable::clear_mask now.

2008-10-09  David A. Capello  <davidcapello@gmail.com>

	* src/raster/mask.cpp (shrink_mask): Fixed a bug where image_crop
	where called with w<=0 and h<=0.

	* src/commands/cmd_clear.cpp (cmd_clear_execute): Changed to use
	Undoable.

2008-10-01  David A. Capello  <davidcapello@gmail.com>

	* src/raster/undo.cpp: Renamed undo_undo and undo_redo to
	undo_do_undo and undo_do_redo.
	(undo_clear_redo): Added (used by Undoable when the final result
	isn't committed).

	* src/dialogs/aniedit.cpp (anieditor_msg_proc): Uses Undoable to
	move frames, and move layers.

	* src/commands/cmd_new_layer.cpp (cmd_new_layer_execute):
	* src/commands/cmd_remove_cel.cpp (cmd_remove_cel_execute):
	* src/commands/cmd_remove_frame.cpp (cmd_remove_frame_execute):
	* src/commands/cmd_new_frame.cpp (cmd_new_frame_execute):
	Changed to use Undoable.

	* src/raster/undoable.h (class Undoable): Added.

2008-09-30  David A. Capello  <davidcapello@gmail.com>

	* src/raster/gfxobj.h (GfxObj): Converted to a class (and all the
	hierarchy of graphics objects).

	* src/tests/: Renamed src/test to src/tests

	* makefile.lst: Project converted to C++

2008-09-29  David A. Capello  <davidcapello@gmail.com>

	* src/widgets/fileview.c (fileview_msg_proc): Fixed a bug when the
	user pressed a key to do an incremental-search but no item where
	selected.

	* src/widgets/colsel.[ch]: Renamed from src/widgets/colsel2.[ch].

	* data/jids/colsel.jid: Removed.

	* src/script/: Removed.

	* src/util/functions.c: From 'src/script/functions.c'.
