@@ -25,7 +25,7 @@
 
 /* general information */
 #define PACKAGE			"ASE"
-#define VERSION			"0.6b2"
+#define VERSION			"0.6"
 #define WEBSITE			"http://www.aseprite.org/"
 #define COPYRIGHT		"Copyright (C) 2001-2008 David A. Capello"
 
